--- a/WT PRAC/LAB 3/DynamicWeb/style.css
+++ b/WT PRAC/LAB 3/DynamicWeb/style.css
@@ -96,5 +96,29 @@ header {
   transform: scale(1.025);
 }
 #shoe:hover {
-  transform: rotate(05deg);
+  /* transform: rotate(05deg); */
+}
+
+.cart-wishlist{
+    display: flex;
+    gap: 10px;
+}
+
+#wishlistbtn{
+  padding: 10px 20px;
+  color: #2a2a2a;
+  background-color: white;
+  border: 2px solid #2a2a2a;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
+#cartbtn{
+  padding: 10px 20px;
+  color: #2a2a2a;
+  background-color: white;
+  border: 2px solid #2a2a2a;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
 }
