--- a/WT PRAC/lab_4/src/components/Content.css
+++ b/WT PRAC/lab_4/src/components/Content.css
@@ -1,29 +1,3 @@
-.navbar {
-  background-color: #333;
-  padding: 10px;
-  align-content: center;
-  height: 50px;
-}
-
-.nav-list {
-  list-style: none;
-  display: flex;
-  gap: 100px;
-  justify-content: center;
-  margin: 0;
-  padding: 0;
-}
-
-.nav-item {
-  display: inline;
-}
-
-.nav-link {
-  color: #fff;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-.nav-link:hover {
-  color: #ddd;
+.content-section {
+  padding: 20px;
 }
